--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -15,6 +15,8 @@
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
     <string name="save">Speichern</string>
+    <string name="share">Teilen</string>
+    <string name="delete">Löschen</string>
 </resources>
 
 
