--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">deepnotes</string>
-    <string name="new_note">Add Note</string>
-    <string name="remove_note">Remove Note</string>
+    <string name="new_note">Add note</string>
+    <string name="remove_note">Remove note</string>
     <string name="send_note">Mail note</string>
+    <string name="change_color">Change color</string>
+    <string name="import_image">Import image</string>
+    <string name="import_from_camera">from camera</string>
+    <string name="import_from_gallery">from gallery</string>
+    <string name="save_dialog">The note was changed. Do you want to save the changes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="share">Share</string>
+    <string name="delete">Delete</string>
 </resources>
