--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="no">No</string>
     <string name="share">Share</string>
     <string name="delete">Delete</string>
+    <string name="save">Save</string>
 </resources>
