improved share, first crop draft

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -28,6 +28,7 @@
     <string name="page_forward">Seite vor</string>
     <string name="note">Notiz</string>
     <string name="saving_note">Notiz wird gespeichert...</string>
+    <string name="note_deleted">Notiz wurde gelöscht!</string>
 </resources>
 
 
