--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="save">Save</string>
     <string name="note">Note</string>
     <string name="saving_note">Saving note...</string>
+    <string name="note_deleted">Note deleted!</string>
 </resources>
