improved memory usage

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -29,6 +29,7 @@
     <string name="note">Notiz</string>
     <string name="saving_note">Notiz wird gespeichert...</string>
     <string name="note_deleted">Notiz wurde gelöscht!</string>
+    <string name="note_saved">Notiz wurde gespeichert!</string>
 </resources>
 
 
