--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="saving_note">Saving note...</string>
     <string name="page1button">1</string>
     <string name="note_deleted">Note deleted!</string>
+    <string name="note_saved">Note saved!</string>
 </resources>
