--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="page1button">1</string>
     <string name="note_deleted">Note deleted!</string>
     <string name="note_saved">Note saved!</string>
+    <string name="date_time_format">MM/dd/yy - h:mm a</string>
 </resources>
