added colorpicker changed draw menu

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -31,6 +31,13 @@
     <string name="note_deleted">Notiz wurde gelöscht!</string>
     <string name="note_saved">Notiz wurde gespeichert!</string>
     <string name="date_time_format">dd.MM.yy - HH:mm</string>
+    <string name="undo">Rückgängig</string>
+    <string name="userdefined">Benutzerdefiniert</string>
+    <string name="change_pen">Stift ändern</string>
+    <string name="pen_width">Stift Dicke</string>
+    <string name="pen_width_thick">Dick</string>
+    <string name="pen_width_thin">Dünn</string>
+    <string name="pen_width_normal">Normal</string>
 </resources>
 
 
