--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -38,6 +38,7 @@
     <string name="pen_width_thick">Dick</string>
     <string name="pen_width_thin">Dünn</string>
     <string name="pen_width_normal">Normal</string>
+    <string name="color_white">Weiß</string>
 </resources>
 
 
