--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="forward">Forward</string>
     <string name="credits">Credits</string>
     <string name="help">Help</string>
+    <string name="clear_page">Clear page</string>
 </resources>
