--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -46,6 +46,7 @@
     <string name="clear_page">Seite leeren</string>
     <string name="choose_image">Bild auswählen</string>
     <string name="max_notes">Du hast die maximale Anzahl an Notizen erreicht.</string>
+    <string name="delete_exception">Es ist etwas schief gelaufen, bitte versuche es noch einmal.</string>
 </resources>
 
 
