--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,11 +28,12 @@
     <string name="pen_width_thin">thin</string>
     <string name="pen_width_normal">normal</string>
     <string name="color_white">white</string>
-        <string name="back">Back</string>
+    <string name="back">Back</string>
     <string name="forward">Forward</string>
     <string name="credits">Credits</string>
     <string name="help">Help</string>
     <string name="clear_page">Clear page</string>
     <string name="choose_image">Chose image</string>
     <string name="max_notes">You have reached the maximum amount of notes.</string>
+    <string name="delete_exception">Something went wrong, please try again.</string>
 </resources>
