--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -17,7 +17,7 @@
     <string name="import_from_camera">von Kamera</string>
     <string name="import_from_gallery">aus Gallerie</string>
     <string name="remove_note">Notiz entfernen</string>
-    <string name="send_note">Notiz versenden</string>
+    <string name="send_note">Notiz teilen</string>
     <string name="save_dialog">Die Note wurde geändert. Möchtest Du sie speichern?</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
