--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">deepnotes</string>
     <string name="new_note">Add note</string>
     <string name="remove_note">Remove note</string>
-    <string name="send_note">Mail note</string>
+    <string name="send_note">Share note</string>
     <string name="change_color">Change color</string>
     <string name="import_image">Import background</string>
     <string name="import_from_camera">from camera</string>
